# vole_vm

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  todo.md  vole_vm.js
.github/workflows/: ci.yml  deploy.yml
assets/: icon.rc  manifest.json  sw.js
crates/egui_code_editor/: Cargo.toml
crates/egui_code_editor/src/syntax/: mod.rs  vole.rs
locales/en-US/: main.ftl
src/: app.rs  assembler.rs  lib.rs  main.rs  vole.rs
src/asm/: asm_result.rs  assembler.rs  mod.rs
src/localization/: language.rs  locale_text.rs
src/ui/: app.rs  cycle.rs  help.rs  mod.rs  numeric.rs  rom.rs  source.rs
