[package]
name = "vole_vm"
version = "0.0.10"
authors = ["James Lennon"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
description = "A software implementation of the Vole virtual machine."
build = "build.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
#pedantic = "warn"

[dependencies]
egui = { version = "0.31", features = ["color-hex"] }
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_code_editor = { path = "crates/egui_code_editor" }
log = "0.4"

# Enum iterators
strum = "0.27"
strum_macros = "0.27"

regex = "1.11"

thiserror = "2"

# App persistence
serde = { version = "1", features = ["derive"] }

[build-dependencies]
embed-resource = { version = "3.0" }

[dev-dependencies]
rand = "0.9"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm
lto = true

[profile.dev]
#opt-level = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
